--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <p>The Power Automate home page offers you various options for creating your own flows and learning about the key features for Power Automate. You can get a quick sense of what's possible and how Power Automate can help your business. </p>
 
 	<p>If your organization has AI enabled, then it also includes the new Copilot features. </p>
- <img src="\mainpage.png" alt="mainpage">
+ <img src="https://simren7.github.io/PowerAutomate_Document/mainpage.png" alt="mainpage">
 <h4>Legend:</h4>
 <ol>
             <li>Left navigation pane</li>
@@ -103,7 +103,7 @@
 	<h3>1 – Left navigation pane</h3>
 <p>Find what you need with the left navigation pane. When you sign in to Power Automate home page, the left navigation pane shows the following menu items:</p>
 
-<img src="\Left navigation pane.png" alt="Left navigation pane">
+<img src="https://simren7.github.io/PowerAutomate_Document/Left navigation pane.png" alt="Left navigation pane">
 
 <h4>Legend:</h4>
 
@@ -136,17 +136,17 @@
 
 	<h4>Discover all</h4>
 <p>Select Discover all to see the Discover page on the left navigation pane.</p>
-<img src="\Discover all.png" alt="Discover all">
+<img src="https://simren7.github.io/PowerAutomate_Document/Discover all.png" alt="Discover all">
 <p>To keep it pinned, select the Screenshot of the Pin icon. pin button.</p>
 
 	<h4>Move up or move down</h4>
 	<p>When you have some pages pinned in the navigation pane, you can move them up or down.</p>
 	<p>To move a page up or down, select the vertical ellipsis (⋮) next to the menu item that you want to move, and then select Move up or Move down.</p>
-<img src="\Move up or move down.png" alt="Move up or move down">
+<img src="https://simren7.github.io/PowerAutomate_Document/Move up or move down.png" alt="Move up or move down">
 
 	<h4>Power Platform</h4>
 	<p>From the left navigation pane, select Power Platform to access Power Platform services such as Power Platform admin center, Power BI, and Power Apps.</p>
-<img src="\Power Platform.png" alt="Power Platform">
+<img src="https://simren7.github.io/PowerAutomate_Document/Power Platform.png" alt="Power Platform">
 
 
 	<h3>2 – Search</h3>
@@ -159,15 +159,15 @@
 	<p>Environments create boundaries between different types of work. For example, an organization might have separate environments for different departments. Many organizations use environments to separate flows that are still being developed from those that are ready for widespread use. You might have access to multiple environments or only one. If you have the appropriate permissions, you might even be able to create your own environments.</p>
 
 	<p>To verify which environment you're in, find the environment switcher near the right side of the header.</p>
-<img src="\Choose an environment.png" alt="Choose an environment">
+<img src="https://simren7.github.io/PowerAutomate_Document/Choose an environment.png" alt="Choose an environment">
 
 	<p>With the environment selector, environments are grouped into two categories: Build Flows and Other environments. Select Filter to filter the list of environments by your role, data platform (Dataverse or none), and environment type, such as production or sandbox.</p>
-<img src="\select environment.png" alt="select environment">
+<img src="https://simren7.github.io/PowerAutomate_Document/select environment.png" alt="select environment">
 
 	<p>Environments where you have either system administrator and/or system customizer security role membership appear under Build flows. The Other environments list displays environments where you have read-only permissions, and can access approvals.</p>
 
 <h4>Filter environments by role</h4>
-<img src="\Filter environments.png" alt="Filter environments">
+<img src="https://simren7.github.io/PowerAutomate_Document/Filter environments.png" alt="Filter environments">
 
  <h4>Note</h4>
 <ul>
@@ -192,11 +192,11 @@
 
 	 <li>Contact preferences: Update your contact information.</li>
 </ul>
-<img src="\Settings.png" alt="Settings">
+<img src="https://simren7.github.io/PowerAutomate_Document/Settings.png" alt="Settings">
 
 <h4>Help</h4>
 <p>In the header, select the question mark icon to find more information about Power Automate.</p>
-<img src="\help.png" alt="help">
+<img src="https://simren7.github.io/PowerAutomate_Document/help.png" alt="help">
 
 <p>Here are some examples of what you can find with the help feature:</p>
 <ul>
@@ -207,7 +207,7 @@
 </ul>
 	<h3>4 - AI Copilot</h3>
 	<p>If your organization has AI enabled, then you see Start building your flow with Copilot on the Power Automate Home screen.<p>
-<img src="\AI Copilot.png" alt="AI Copilot">
+<img src="https://simren7.github.io/PowerAutomate_Document/AI Copilot.png" alt="AI Copilot">
 
 	<h3>5 – Learning tools and more</h3>
 	<p>The Home page gives you access to learning tools, videos, community forums, and more. Scroll down the screen to view all the product related tools.</p>
